# epic5

./: .gitignore  BUG_FORM  COPYRIGHT  EPIC4-USERS-README  FILES  INSTALL  KNOWNBUGS  Makefile.in  README  README-CRYPTO  UPDATES  VOTES  WISHLIST  acconfig.h  bsdinstall  configure  configure.in  mkinstalldirs  mkpatch  test.c
contrib/: cdrom.c  ircman.c  loaddll  utf8.c
doc/: 256color  DCC_REVERSE  EPIC_ABOUT  EPIC_THANKS  EPIC_VERSIONS  IPV6  IRCII_VERSIONS  README.SSL  SILLINESS  TS4  antiflooding  dccresum.txt  entry_points  epic.1  epic5.1  expansions  fish  keys  local_vars  missing  new-load  nicknames  outputhelp  pf-loader  python  scrollind  server_groups  utf8  what-needs-rewriting  word-lists  word-support
include/: alias.h  alist.h  all-globals.h  all.h  ara.h  array.h  cJSON.h  clock.h  commands.h  compat.h  config.h  crypt.h  ctcp.h  dcc.h  debug.h  defs.h.in  elf.h  exec.h  extlang.h  files.h  flood.h  functions.h  funny.h  gailib.h  glob.h  help.h  history.h  hook.h  if.h  ifcmd.h  ignore.h  input.h  irc.h  irc_std.h  ircaux.h  keys.h  lastlog.h  levels.h  list.h  log.h  (+31 more)
regress/: README  arglist  color  color256  crash-irc  eval-test  fib  funcs  hangtest  json  karll-arrays  kill  localvars  math  rainbug  random  scroll  stat  test_xform3  test_xform4  utf8test  window  xform
script/: 2.8script  activity  addset  alias  alloc_dump_summary.sh  altchan  ambig  autoget  autojoin  autokick  autoop  autoquery  away  ban  basical  builtins  capctl  chanmonitor  colors  columns  commandqueues  country  ctcp  cycle  data_array  data_struct  dbmdump  dcc_ports  dcc_spacefix  dcc_timeout  deban  debug.irc  debugwin  dig  dns  dump  edit  edit_topic  efnext  environment  (+118 more)
source/: Makefile.in  alias.c  alist.c  alloca.c  ara.c  array.c  cJSON.c  clock.c  commands.c  compat.c  crypt.c  crypto.c  ctcp.c  dcc.c  debug.c  debuglog.c  elf.c  exec.c  expr.c  expr2.c  files.c  flood.c  functions.c  funny.c  gailib.c  glob.c  help.c  history.c  hook.c  if.c  ignore.c  info.c.sh  info.c.sh.in  input.c  irc.c  ircaux.c  ircsig.c  keys.c  lastlog.c  levels.c  (+35 more)
